--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -23,3 +23,180 @@ body {
 .theme > article > * {
   position: relative;
 }
+
+.music svg {
+  width: inherit !important;
+  height: inherit !important;
+}
+
+.preloader-spin,
+.preloader-spin--inverted {
+  font-size: 32px;
+  width: 1em;
+  height: 1em;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+  -webkit-animation: a-show-preloader--inverted 0.37214s ease;
+  animation: a-show-preloader--inverted 0.37214s ease;
+  -webkit-animation-iteration-count: once;
+  margin: auto;
+  animation-iteration-count: once;
+}
+.preloader-spin__petal,
+.preloader-spin--inverted__petal {
+  position: absolute;
+  left: 0.4629em;
+  bottom: 0;
+  width: 0.074em;
+  height: 0.2777em;
+  border-radius: 0.5em;
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-transform-origin: center -0.2222em;
+  transform-origin: center -0.2222em;
+  -webkit-animation: a-preloader--inverted 1s infinite linear;
+  animation: a-preloader--inverted 1s infinite linear;
+}
+.preloader-spin__petal:nth-child(1),
+.preloader-spin--inverted__petal:nth-child(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+.preloader-spin__petal:nth-child(2),
+.preloader-spin--inverted__petal:nth-child(2) {
+  -webkit-animation-delay: 0.083333333333333s;
+  animation-delay: 0.083333333333333s;
+  -webkit-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+.preloader-spin__petal:nth-child(3),
+.preloader-spin--inverted__petal:nth-child(3) {
+  -webkit-animation-delay: 0.166666666666667s;
+  animation-delay: 0.166666666666667s;
+  -webkit-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+.preloader-spin__petal:nth-child(4),
+.preloader-spin--inverted__petal:nth-child(4) {
+  -webkit-animation-delay: 0.25s;
+  animation-delay: 0.25s;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.preloader-spin__petal:nth-child(5),
+.preloader-spin--inverted__petal:nth-child(5) {
+  -webkit-animation-delay: 0.333333333333333s;
+  animation-delay: 0.333333333333333s;
+  -webkit-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+.preloader-spin__petal:nth-child(6),
+.preloader-spin--inverted__petal:nth-child(6) {
+  -webkit-animation-delay: 0.416666666666667s;
+  animation-delay: 0.416666666666667s;
+  -webkit-transform: rotate(150deg);
+  transform: rotate(150deg);
+}
+.preloader-spin__petal:nth-child(7),
+.preloader-spin--inverted__petal:nth-child(7) {
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.preloader-spin__petal:nth-child(8),
+.preloader-spin--inverted__petal:nth-child(8) {
+  -webkit-animation-delay: 0.583333333333333s;
+  animation-delay: 0.583333333333333s;
+  -webkit-transform: rotate(210deg);
+  transform: rotate(210deg);
+}
+.preloader-spin__petal:nth-child(9),
+.preloader-spin--inverted__petal:nth-child(9) {
+  -webkit-animation-delay: 0.666666666666667s;
+  animation-delay: 0.666666666666667s;
+  -webkit-transform: rotate(240deg);
+  transform: rotate(240deg);
+}
+.preloader-spin__petal:nth-child(10),
+.preloader-spin--inverted__petal:nth-child(10) {
+  -webkit-animation-delay: 0.75s;
+  animation-delay: 0.75s;
+  -webkit-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+.preloader-spin__petal:nth-child(11),
+.preloader-spin--inverted__petal:nth-child(11) {
+  -webkit-animation-delay: 0.833333333333333s;
+  animation-delay: 0.833333333333333s;
+  -webkit-transform: rotate(300deg);
+  transform: rotate(300deg);
+}
+.preloader-spin__petal:nth-child(12),
+.preloader-spin--inverted__petal:nth-child(12) {
+  -webkit-animation-delay: 0.916666666666667s;
+  animation-delay: 0.916666666666667s;
+  -webkit-transform: rotate(330deg);
+  transform: rotate(330deg);
+}
+.preloader-spin--inverted .preloader-spin__petal,
+.preloader-spin--inverted--inverted .preloader-spin__petal {
+  background: rgba(0, 0, 0, 0.15);
+  -webkit-animation-name: a-preloader--inverted;
+  animation-name: a-preloader--inverted;
+}
+@-webkit-keyframes a-show-preloader {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes a-show-preloader {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes a-preloader {
+  0% {
+    background: rgba(255, 255, 255, 0.91);
+  }
+  100% {
+    background: rgba(255, 255, 255, 0.15);
+  }
+}
+@keyframes a-preloader {
+  0% {
+    background: rgba(255, 255, 255, 0.91);
+  }
+  100% {
+    background: rgba(255, 255, 255, 0.15);
+  }
+}
+@-webkit-keyframes a-preloader--inverted {
+  0% {
+    background: rgba(0, 0, 0, 0.91);
+  }
+  100% {
+    background: rgba(0, 0, 0, 0.15);
+  }
+}
+@keyframes a-preloader--inverted {
+  0% {
+    background: rgba(0, 0, 0, 0.91);
+  }
+  100% {
+    background: rgba(0, 0, 0, 0.15);
+  }
+}
+.dark .preloader-spin {
+  animation-name: a-show-preloader !important;
+}
+.dark .preloader-spin__petal {
+  animation-name: a-preloader !important;
+}
