--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@import "@radix-ui/themes/styles.css";
+@import "nextra-theme-blog/dist/style.css";
+@import url('https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +12,10 @@
 
 .no-underline a {
   text-decoration: none !important;
+}
+
+:root {
+  --x-spacing: 0px !important;
 }
 
 h1 {
